Bug 59262 - LOCALHELP missing entry Dbtdata/cui/ui/numberingformatpage/categorylb
Summary: LOCALHELP missing entry Dbtdata/cui/ui/numberingformatpage/categorylb
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-12 00:08 UTC by Terrence Enger
Modified: 2017-07-13 16:05 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
This is how it looks like in help debug mode, note the help id. (44.12 KB, image/png)
2017-01-29 22:35 UTC, Gabor Kelemen (allotropia)
Details
The same tab page in Calc, in help debug mode. Same help id. (64.96 KB, image/png)
2017-01-29 22:37 UTC, Gabor Kelemen (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2013-01-12 00:08:44 UTC
In Base Table Data View, I right clicked on a column headking and
selected Column Format from the drop-down menu to get to the Dialog
"Field Format".  There I clicked <Help>.  This opened a FireFox tab to
<https://help.libreoffice.org/dbtdata/cui:ListBox:RID_SVXPAGE_NUMBERFORMAT:LB_CATEGORY?Language=en-US&System=UNIX&Version=4.0>,
which tells me

    Dbtdata/cui:ListBox:RID SVXPAGE NUMBERFORMAT:LB CATEGORY
    There is currently no text in this page.

Thie seems, please pardon the pun, un<Help>ful.


I see this with 4.0.0.1 (Build id 527dba6...) installed "in parallel"
from the tarball of 32-bit .deb files.  I did not install any helppack
or languagepack.


I am setting status UNCONFIRMED in case the difficulty has something
to do with my flaky access to the internet.


Terry.
Comment 1 Terrence Enger 2013-01-12 14:04:33 UTC
With master commit 16ab898, pulled around 2012-01-10 10:55Z, the same
ser actions bring me to a different URI,
<https://help.libreoffice.org/Error/HTTP_NOT_FOUND.html.var>, which
has a different title but amounts to the same thing ...

    Error/HTTP NOT FOUND.html.var
    There is currently no text in this page.
Comment 2 Andras Timar 2013-01-12 14:12:48 UTC
AFAIK version 4.0 help files have not been uploaded to wiki yet.
Comment 3 beimaginativeegroup 2013-01-12 15:05:13 UTC
I'm marking this as a NOTABUG since this is not exactly a bug but something which is not yet ready.
Comment 4 Terrence Enger 2013-01-12 15:41:25 UTC
In a sense NOTABUG sounds entirely right.  But the release candidate
was announced on a bunch of mailing lists.  Perhaps the download page
<http://www.libreoffice.org/download/pre-releases/> or the release
notes <https://wiki.documentfoundation.org/Releases/4.0.0/RC1> should
warn early testers not to expect the web-help to work?
Comment 5 Jan Holesovsky 2013-01-15 19:51:31 UTC
Taking this, need to check this when the 4.0 help is uploaded.
Comment 6 Joel Madero 2013-03-04 18:01:57 UTC
@Jan - any update on this one?
Comment 7 Nino 2013-03-28 20:23:23 UTC
Are you aware, that with installed LOCALHELP F1 also returns a blank page when called from this dialog? So maybe it's not related to WIKIHELP but the help call is malformed itself? Or the help page does not exist at all? 

Got identical results (empty help page) in 4.0.2.2, 3.6.5.2, and 3.5.7.2
Comment 8 Andras Timar 2013-04-11 21:19:54 UTC
Nino is right.
Comment 9 Terrence Enger 2014-08-14 13:05:02 UTC
I still see the problem with my debug build of master commit 692878e,
fetched 2014-08-13, built and running on debian-wheezy 64-bit.

The referenced URI is
<https://help.libreoffice.org/dbtdata/cui/ui/numberingformatpage/categorylb?Language=en-US&System=UNIX&Version=4.4>,
and the page reads:

    Dbtdata/cui/ui/numberingformatpage/categorylb

    There is currently no text in this page. You can search for this
    page title in other pages, or search the related logs, but you do
    not have permission to create this page.
Comment 10 QA Administrators 2016-09-20 10:10:19 UTC Comment hidden (obsolete)
Comment 11 Terrence Enger 2016-09-23 18:39:17 UTC
On debian-stretch with daily dbguitil bibisect repo version 2016-09-20, <Help> goes to the wiki, help.libreoffice.org.  This reports "There is currently no text in this page ...", but I shall deem that a different problem.  So, I am setting RESOLVED WORKSFORME.
Comment 12 Nino 2016-09-23 20:32:02 UTC
Changed summary as this bug is not about WIKIHELP but about builtin LOCALHELP (see #c7)
Help still shows empty page in localhelp in LibO 5222, so reverting to NEW
Comment 13 Gabor Kelemen (allotropia) 2017-01-29 22:35:26 UTC
Created attachment 130755 [details]
This is how it looks like in help debug mode, note the help id.
Comment 14 Gabor Kelemen (allotropia) 2017-01-29 22:37:05 UTC
Created attachment 130756 [details]
The same tab page in Calc, in help debug mode. Same help id.

It is very strange that in Calc the same dialog tab displays the correct extended help, but not in Base.
Comment 16 Terrence Enger 2017-05-22 18:12:30 UTC
Working on debian-stretch 64-bit, my results are generally negative:

(*) daily dbgutil version 2017-05-22: from tab Alignment <Help> goes to URL
    https://help.libreoffice.org/sdatabase/dbaccess/ui/fielddialog/tabcontrol?Language=en-US&System=UNIX&Version=5.5,
    which says "There is no text on this page".

(*) 5.3 (fresh) without local help: from tab Format goes to URL
    https://help.libreoffice.org/dbtdata/cui/ui/numberingformatpage/categorylb?Language=en-US&System=UNIX&Version=5.3
    and from tab Alignment goes to URL
    https://help.libreoffice.org/dbtdata/cui/ui/cellalignment/comboboxHorzAlign?Language=en-US&System=UNIX&Version=5.3,
    each of which say "There is no text on this page."

(*) 5.3 (fresh) wih local help: from either tab <Help> open local Help
    to tab Index with Search term blank.  I.e., the help displayed is
    not sensitive to context.

I am setting status REOPENED.
Comment 17 Gabor Kelemen (allotropia) 2017-05-22 22:42:11 UTC
Hi Terrence

Thanks for double checking this.

I think there is an explanation for what you see:

- With the daily build you get a correct URL (note the sdatabase/ part instead of dbtdata/) but the "new" help for 5.4 is not yet uploaded to that. But the content will get there soon. I just generated the wiki content locally, and I think I have all the necessary redirect files.

- With 5.3 this is normal as this patch was not backported to that branch.
Comment 18 Xisco Faulí 2017-07-13 09:21:16 UTC
Setting Assignee back to default. Please change it back if you're still working on this issue
Comment 19 Gabor Kelemen (allotropia) 2017-07-13 16:05:55 UTC
Now I'm being redirected from a current master build to

https://help.libreoffice.org/index.php?title=Common/Numbers_Format&Language=en-US&System=UNIX&Version=6.0#bm_id3153312

which is the correct page in the help wiki. 
I think it's now safe to say this is fixed.