tdf#59262 Display help in Base Table Data View -> Field Format

With this the Field Format window displays the correct help pages
for the Format and Alignment tabs.

Change-Id: Id439a84db5ebd66525991725c94ba8a9d50b70ba